[package]
name = "rdtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
clap = "4.2.7"
serde = { version = "1.0.162", features = ["derive"] }
serde_millis = "0.1.1"
anyhow = "1.0.71"
chrono = "0.4.24"
elasticsearch = "8.5.0-alpha.1"
reqwest = "0.11.17"
serde_json = "1.0.96"
tokio = "1.28.1"
chrono-tz = "0.8.2"
rust_decimal = "1.29.1"
base64 = "0.21.0"
itertools = "0.10.5"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
serde_repr = "0.1.12"
zip = "0.6.5"
