[package]
name = "rdtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.162", features = ["derive"] }
anyhow = "1.0.71"
serde_repr = "0.1.12"
zip = "0.6.5"
indicatif = "0.17.3"
bincode = "1.3.3"
tempfile = "3.5.0"
chrono = "0.4.26"
chrono-tz = "0.8.2"
stringmetrics = "2.2.2"
itertools = "0.10.5"
bio = "1.3.0"
ordered-float = "3.7.0"
rand = "0.8.5"
ndarray = "0.15.6"
kmedoids = "0.4.3"
by_address = "1.1.0"


[profile.release]
opt-level = 3     # Optimize for speed.
codegen-units = 1
